# posts

./: pyproject.toml
alembic/: env.py
src/: __init__.py  config.py  database.py  main.py
src/post/: models.py  router.py  schema.py
