[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Akbar Alizhonov <akbaralizhonov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pre-commit = "^4.0.1"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
